# click

./: .bzrignore  .coveragerc  Makefile.am  Makefile.am.coverage  README  autogen.sh  configure.ac  get-version  merge-coverage  run-click  run-tests  setup.cfg  setup.py  setup.py.in  tox.ini
click/: Makefile.am  __init__.py  build.py  chroot.py  database.py  framework.py  hooks.py  install.py  osextras.py  paths.py.in  query.py  user.py  versions.py
click/commands/: __init__.py  build.py  buildsource.py  chroot.py  desktophook.py  framework.py  hook.py  info.py  install.py  list-frameworks.py  list.py  package-directory.py  pkgdir.py  register.py  unregister.py  verify.py
click/tests/: Makefile.am  __init__.py  config.py.in  gimock.py  gimock_types.py  helpers.py  preload.h  test_arfile.py  test_build.py  test_chroot.py  test_database.py  test_framework.py  test_hooks.py  test_install.py  test_osextras.py  test_paths.py.in  test_query.py  test_scripts.py  test_static.py  test_user.py
click/tests/integration/: helpers.py  test_build_core_apps.py  test_buildsource.py  test_chroot.py  test_contents.py  test_frameworks.py  test_hook.py  test_info.py  test_install.py  test_signatures.py  test_verify.py
click/tests/integration/data/evil-keyring/: pubring.gpg  secring.gpg  trustdb.gpg
click/tests/integration/data/origin-keyring/: pubring.gpg  secring.gpg
click_package/: build.py  chroot.py  framework.py  install.py  json_helpers.py  osextras.py  preinst.py
click_package/commands/: __init__.py  build.py  buildsource.py  chroot.py  contents.py  desktophook.py  info.py  install.py  list.py  register.py  verify.py
click_package/tests/: Makefile.am  __init__.py  gimock.py  gimock_types.py  helpers.py  preload.h  test_arfile.py  test_build.py  test_chroot.py  test_database.py  test_framework.py  test_hooks.py  test_install.py  test_osextras.py  test_paths.py.in  test_query.py  test_scripts.py  test_static.py  test_user.py
click_package/tests/integration/: helpers.py  test_build.py  test_build_core_apps.py  test_chroot.py  test_hook.py  test_signatures.py  test_verify.py
clickpackage/: arfile.py  build.py  hooks.py  install.py  osextras.py  preinst.py  versions.py
clickpackage/commands/: __init__.py  build.py  buildsource.py  hook.py  info.py  install.py  source.py  verify.py
clickpackage/tests/: helpers.py  test_arfile.py  test_build.py  test_hooks.py  test_install.py  test_osextras.py  test_scripts.py  test_static.py
conf/: Makefile.am
conf/databases/: 99_default.conf.in  Makefile.am
debhelper/: Makefile.am  click.pm  clickpackage.pm  dh_click  dh_clickpackage  postinst-click  postinst-clickpackage  prerm-click  prerm-clickpackage
debian/: changelog  click-dev.install  click-install.install  click-install.postinst  click-package-common.install  click-package.dirs  click-package.install  click-package.postrm  click.click-desktop.click-hook  click.desktop.click-hook  click.dirs  click.install  click.lintian-overrides  click.manpages  click.postinst  click.sharedmimeinfo  control  copyright  libclick-0.4-0.install  libclick-0.4-0.symbols  libclick-0.4-dev.install  packagekit-check  packagekit-plugin-click.docs  packagekit-plugin-click.install  rules
debian/tests/: control  run-tests.sh
doc/: Makefile  conf.py  constraints  constraints.rst  databases.rst  file-format  file-format.rst  hooks  hooks.rst  index.rst  intro.rst  manpage.rst  todo.rst
init/: Makefile.am
init/systemd/: Makefile.am  click-system-hooks.service.in  click-user-hooks.service.in
init/upstart/: click-system-hooks.conf.in  click-user-hooks.conf.in
lib/: Makefile.am
lib/click/: Makefile.am  click-0.4.pc.in  click.sym  database.vala  deb822.vala  framework.vala  hooks.vala  osextras.vala  paths.vala.in  posix-extra.vapi  query.vala  user.vala  valac-wrapper.in
m4/: gcov.m4
pk-plugin/: 10-click.pkla  Makefile.am  README  com.ubuntu.click.pkla  com.ubuntu.click.policy.in  pk-plugin-click.c
po/: POTFILES.in  click.pot
preload/: Makefile  Makefile.am  clickpreload.c
schroot/: Makefile.am  fstab
tests/integration/: helpers.py  test_build_core_apps.py  test_chroot.py  test_frameworks.py  test_hook.py  test_info.py  test_install.py  test_integration.py  test_list.py  test_signatures.py  test_verify.py
tests/integration/data/origin-keyring/: trustdb.gpg
upstart/: Makefile.am  click-hook.conf  click-system-hooks.conf  click-user-hooks.conf  click-user-hooks.conf.in
